anthos-bundles/mitre-v2024/restrict-windows-hostprocess.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPWindowsHostProcess
metadata:
  name: mitre-v2024-restrict-windows-hostprocess
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts running of Windows HostProcess containers / pods. See "Create a Windows HostProcess Pod" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/',
        remediation: 'Containers and pods cannot run with `securityContext.windowsOptions.hostProcess` set to `true`. Remove `securityContext.windowsOptions.hostProcess: true` from your containers and pods. See "Create a Windows HostProcess Pod" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/',
        minimumTemplateLibraryVersion: '1.16.2',
        constraintHash: 'ecb6e212dd9f9f8d81032a7f49bf2a2138edf01f5df562ae6258d17099a53b00'
      }"
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
  enforcementAction: dryrun
